@@ -1,5 +1,10 @@
 2011-05-25  Corinna Vinschen  <corinna@vinschen.de>
 
+	* init.cc (dll_entry): Reinstantiate wow64_test_stack_marker and
+	previous stack tests.
+
+2011-05-25  Corinna Vinschen  <corinna@vinschen.de>
+
 	* posix.sgml (std-notes): Add missing <para>.
 
 2011-05-24  Corinna Vinschen  <corinna@vinschen.de>
